# umple-bench

./: .gitignore  README.md  agents.md  job.yaml  pyproject.toml  setup.sh  umple-bench-spec.md
.github/workflows/: oracle-smoke.yml
datasets/: registry.yaml
external_agents/pi/: agent.py
installed_agents/: __init__.py
installed_agents/pi/: __init__.py  agent.py  install-pi.sh.j2
jobs/2026-02-12__21-15-02/: config.json  result.json
jobs/2026-02-12__21-15-31/: config.json  result.json
jobs/2026-02-12__21-16-12/: config.json  result.json
jobs/2026-02-12__21-17-28/: config.json  result.json
jobs/2026-02-12__21-18-10/: config.json  result.json
jobs/2026-02-12__21-18-54/: config.json  result.json
jobs/2026-02-12__21-19-58/: config.json  result.json
jobs/2026-02-12__21-21-17/: config.json  result.json
jobs/2026-02-12__21-22-15/: config.json  result.json
jobs/2026-02-12__21-23-33/: config.json  result.json
jobs/2026-02-12__21-24-01/: config.json  result.json
jobs/2026-02-12__21-24-51/: config.json  result.json
jobs/2026-02-12__21-26-24/: config.json  result.json
jobs/2026-02-12__21-28-57/: config.json  result.json
jobs/2026-02-12__21-29-28/: config.json  result.json
jobs/2026-02-12__21-30-13/: config.json  result.json
jobs/2026-02-12__21-38-05/: config.json  result.json
jobs/2026-02-12__21-39-20/: config.json  (+1 more)
prompts/: README.md
references/: agents.md  core-concepts.md  getting-started.md  llm-judge.md  task-structure.md
scripts/: scaffold_umple_task.sh  sync_state_machine_graph.sh
tasks/: README.md
txl/: umpleJavaToPython.ctxl
(+137 files in other folders)
