[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "umple-bench"
version = "0.1.0"
description = "Docker-only benchmark runner for state-machine generation from requirements."
readme = "README.md"
requires-python = ">=3.11"
dependencies = []

[project.scripts]
umple-bench = "umple_bench.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
